axum-debug/tests/fail/wrong_return_type.stderr
error[E0277]: the trait bound `bool: axum_core::response::IntoResponseHeaders` is not satisfied
 --> tests/fail/wrong_return_type.rs:4:23
  |
4 | async fn handler() -> bool {
  |                       ^^^^ the trait `axum_core::response::IntoResponseHeaders` is not implemented for `bool`
  |
  = note: required because of the requirements on the impl of `IntoResponse` for `bool`
note: required by a bound in `__axum_debug_check_handler_into_response::{closure#0}::check`
 --> tests/fail/wrong_return_type.rs:4:23
  |
4 | async fn handler() -> bool {
  |                       ^^^^ required by this bound in `__axum_debug_check_handler_into_response::{closure#0}::check`
